--- a/LUATeach/packages.config
+++ b/LUATeach/packages.config
@@ -6,4 +6,5 @@
   <package id="AvalonEdit" version="5.0.4" targetFramework="net472" />
   <package id="Costura.Fody" version="4.0.0" targetFramework="net472" />
   <package id="Fody" version="5.1.1" targetFramework="net472" developmentDependency="true" />
+  <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
 </packages>
