--- a/LUATeach/LUATeach.csproj
+++ b/LUATeach/LUATeach.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Global\Utils.cs" />
     <Compile Include="LuaEnv\LuaApi.cs" />
     <Compile Include="LuaEnv\LuaEnv.cs" />
+    <Compile Include="LuaEnv\LuaRunEnv.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -134,6 +135,10 @@
     <EmbeddedResource Include="Lua.xshd" />
     <Resource Include="Assets\script\head.lua" />
     <Resource Include="Assets\script\default.lua" />
+    <Resource Include="Assets\script\JSON.lua" />
+    <Resource Include="Assets\script\log.lua" />
+    <Resource Include="Assets\script\strings.lua" />
+    <Resource Include="Assets\script\sys.lua" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
