--- a/LUATeach/packages.config
+++ b/LUATeach/packages.config
@@ -2,9 +2,11 @@
 <packages>
   <package id="AdonisUI" version="1.11.0" targetFramework="net472" />
   <package id="AdonisUI.ClassicTheme" version="1.11.0" targetFramework="net472" />
-  <package id="Autoupdater.NET.Official" version="1.5.4" targetFramework="net472" />
+  <package id="Autoupdater.NET.Official" version="1.5.5" targetFramework="net45" />
   <package id="AvalonEdit" version="5.0.4" targetFramework="net472" />
   <package id="Costura.Fody" version="4.0.0" targetFramework="net472" />
   <package id="Fody" version="5.1.1" targetFramework="net472" developmentDependency="true" />
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
+  <package id="Markdig" version="0.16.0" targetFramework="net45" />
+  <package id="Markdig.Wpf" version="0.2.8" targetFramework="net45" />
 </packages>
