--- a/LUATeach/LUATeach.csproj
+++ b/LUATeach/LUATeach.csproj
@@ -122,6 +122,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\RightPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\WrongPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Pages\HomePage.xaml.cs">
@@ -135,6 +143,12 @@
     </Compile>
     <Compile Include="Pages\LuaListPage.xaml.cs">
       <DependentUpon>LuaListPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\RightPage.xaml.cs">
+      <DependentUpon>RightPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\WrongPage.xaml.cs">
+      <DependentUpon>WrongPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
