加上代码、上次进度记录，加上更新检查框架

--- a/LUATeach/Properties/Settings.settings
+++ b/LUATeach/Properties/Settings.settings
@@ -1,7 +1,27 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="LUATeach.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="code" Type="System.String" Scope="User">
+      <Value Profile="(Default)">--此处可测试你的lua脚本运行效果
+--支持Lua5.3自带功能、以及LUAT Task任务相关接口
+--同时支持XLua直接调用C#接口的功能
+
+--新建任务，每休眠1000ms继续一次
+sys.taskInit(function()
+    while true do
+        sys.wait(1000)--等待1000ms
+        log.info("task wait",os.time())
+    end
+end)
+
+--1000ms循环定时器
+sys.timerLoopStart(log.info,1000,"timer test")
+
+</Value>
+    </Setting>
+    <Setting Name="lastPass" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
