--- a/LUATeach/App.config
+++ b/LUATeach/App.config
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="LUATeach.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
+    <userSettings>
+        <LUATeach.Properties.Settings>
+            <setting name="code" serializeAs="String">
+                <value>--此处可测试你的lua脚本运行效果
+--支持Lua5.3自带功能、以及LUAT Task任务相关接口
+--同时支持XLua直接调用C#接口的功能
+
+--新建任务，每休眠1000ms继续一次
+sys.taskInit(function()
+    while true do
+        sys.wait(1000)--等待1000ms
+        log.info("task wait",os.time())
+    end
+end)
+
+--1000ms循环定时器
+sys.timerLoopStart(log.info,1000,"timer test")
+
+</value>
+            </setting>
+            <setting name="lastPass" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </LUATeach.Properties.Settings>
+    </userSettings>
 </configuration>
