--- a/LUATeach/packages.config
+++ b/LUATeach/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AdonisUI" version="1.11.0" targetFramework="net472" />
   <package id="AdonisUI.ClassicTheme" version="1.11.0" targetFramework="net472" />
+  <package id="AppAutoUpdater" version="1.1.1" targetFramework="net45" />
   <package id="Autoupdater.NET.Official" version="1.5.5" targetFramework="net45" />
   <package id="AvalonEdit" version="5.0.4" targetFramework="net472" />
   <package id="Costura.Fody" version="4.0.0" targetFramework="net472" />
@@ -15,6 +16,7 @@
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net45" />
   <package id="NETStandard.Library" version="1.6.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
+  <package id="SharpZipLib" version="1.1.0" targetFramework="net45" />
   <package id="sqlite-net-pcl" version="1.3.1" targetFramework="net45" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.2" targetFramework="net45" />
   <package id="SQLitePCLRaw.core" version="1.1.2" targetFramework="net45" />
