升级后自动导入之前的配置

--- a/LUATeach/App.config
+++ b/LUATeach/App.config
@@ -31,6 +31,9 @@ sys.timerLoopStart(log.info,1000,"timer test")
             <setting name="lastPass" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="UpgradeRequired" serializeAs="String">
+                <value>True</value>
+            </setting>
         </LUATeach.Properties.Settings>
     </userSettings>
 </configuration>
