--- a/LUATeach/Properties/Settings.settings
+++ b/LUATeach/Properties/Settings.settings
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='utf-8'?>
+<?xml version='1.0' encoding='utf-8'?>
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="LUATeach.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
@@ -22,6 +22,9 @@ sys.timerLoopStart(log.info,1000,"timer test")
     </Setting>
     <Setting Name="lastPass" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
