--- a/LUATeach/LUATeach.csproj
+++ b/LUATeach/LUATeach.csproj
@@ -205,6 +205,7 @@
     <Resource Include="Assets\script\levels\function_return2.lua" />
     <Resource Include="Assets\script\levels\function_return3.lua" />
     <Resource Include="Assets\script\levels\table1.lua" />
+    <Resource Include="Assets\script\levels\table2.lua" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
