--- a/LUATeach/LUATeach.csproj
+++ b/LUATeach/LUATeach.csproj
@@ -210,6 +210,8 @@
     <Resource Include="Assets\script\levels\table4.lua" />
     <Resource Include="Assets\script\levels\table5.lua" />
     <Resource Include="Assets\script\levels\table6.lua" />
+    <Resource Include="Assets\script\levels\while.lua" />
+    <Resource Include="Assets\script\levels\for.lua" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
