--- a/LUATeach/LUATeach.csproj
+++ b/LUATeach/LUATeach.csproj
@@ -212,6 +212,7 @@
     <Resource Include="Assets\script\levels\table6.lua" />
     <Resource Include="Assets\script\levels\while.lua" />
     <Resource Include="Assets\script\levels\for.lua" />
+    <Resource Include="Assets\script\levels\break.lua" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
