--- a/LUATeach/LUATeach.csproj
+++ b/LUATeach/LUATeach.csproj
@@ -226,6 +226,7 @@
     <Resource Include="Assets\script\levels\string.char.lua" />
     <Resource Include="Assets\script\levels\string.byte.lua" />
     <Resource Include="Assets\script\levels\string.find.lua" />
+    <Resource Include="Assets\script\levels\string.gsub.lua" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
